# automatic-qa-categories

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-finetune-wsl-cu121.txt  requirements.txt
config/: category_map.yaml  model_config.yaml  output_schema.yaml  rubric.yaml
examples/: qa.csv  qa_llm_training.first10.jsonl
examples/llm_training_splits/: split_counts.json
scripts/: build_all_category_training_sets.py  build_category_training_data.py  build_llm_training_data.py  check_wsl_cuda.py  convert_csv_to_json.py  evaluate_lora_adapter.py  evaluate_model.py  fine_tune_lora.py  run_audit_batch.py  run_single_audit.py  select_category_send_ids.py  train_dataset_prep.py
src/: __init__.py  audit_pipeline.py  main.py
src/adapters/: __init__.py  base_llm.py  ollama_adapter.py
src/aggregation/: __init__.py  failure_notes.py  final_scoring.py  merge_scores.py
src/models/: __init__.py  audit_models.py  io_models.py  llm_models.py
src/preprocessing/: __init__.py  evidence_builder.py  normalize_input.py  thread_parser.py
src/prompts/: clarity.txt  issue_identification.txt  proper_resolution.txt  shared_system.txt  tone.txt  workflow.txt  zero_tolerance.txt
src/specialists/: __init__.py  base_specialist.py  clarity.py  issue_identification.py  proper_resolution.py  tone.py  workflow.py  zero_tolerance.py
src/utils/: enums.py  (+3 more)
tests/: conftest.py  test_aggregator.py  test_csv_conversion.py  test_end_to_end.py  test_input_normalization.py  test_last_message_selection.py  test_manual_score_joiner.py  test_output_schema.py  test_rule_validators.py
(+12 files in other folders)
